# smartess-local

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  data-source.md  protocol.md
smartess_local/: __init__.py  __main__.py  cli.py  inverter.py  protocol.py  registers.py  state.py
tests/: conftest.py  test_cli.py  test_inverter.py  test_protocol.py  test_registers.py  test_state.py
